--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,13 @@
 /node_modules
 /.pnp
 .pnp.js
-.package-lock.json
 
 # testing
 /coverage
 
 # production
 /build
-
+package-lock.json
 # misc
 .DS_Store
 .env
